Fix polaroid effect to Gallery section complete

--- a/index.html
+++ b/index.html
@@ -165,120 +165,72 @@
 				</div>
 				<div class="row grid">
 					<!--ERROR: get images closer together if i have time-->
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-1">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery2.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number one">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">first img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-2">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery3.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery3.jpg" alt="ISS image number two">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">Second img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-3">
 						<div class="pictures">
-							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery7.jpg">
-								<img src="SpaceStation/img/gallery/ms2-gallery7.jpg" alt="ISS image number three">
+							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery10.jpg">
+								<img src="SpaceStation/img/gallery/ms2-gallery10.jpg" alt="ISS image number three">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">third img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-4">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery5.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery5.jpg" alt="ISS image number four">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">forth img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-5">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery4.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery4.jpg" alt="ISS image number five">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">fifth img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-6">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery6.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery6.jpg" alt="ISS image number six">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">sixth img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-7">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery8.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery8.jpg" alt="ISS image number seven">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">seventh img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-8">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery9.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery9.jpg" alt="ISS image number eigth">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">eigth img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-9">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery3.jpg">
 								<img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number nine">
                             </a>
 						</div>
-						<div class="img-description py-4">
-							<h4 class="text-uppercase">ninth img</h4>
-							<span class="text-secondary">further info</span>
-						</div>
-
 					</div>
 				</div>
 			</div>
 		</section>
-
-
-
 		<!---------------------------- End Gallery section ------------------------------>
 
 		<!---------------------------- Start Quotes section ------------------------------>
@@ -288,7 +240,7 @@
 					<!---CONTAINS BOOTSTRAP CLASS-->
 					<div class="col-12">
 						<div class="quotes-title">
-							<h1 class="text-uppercase">Astronauts <span>ISS</span> thoughts</h1>
+							<h1 class="text-uppercase"><i class="fas fa-user-astronaut"></i> Astronauts <span>ISS</span> thoughts <i class="fas fa-user-astronaut"></i></h1>
 							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis
 								voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
 						</div>
