Fix footer logo image made bigger

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					<a href="#page-top"><img src="SpaceStation/img/iss-logo2-small.png" alt="ISS logo"></a>
 				</div>
 				<div class="social-media text-center">
-					<h5 class="text-uppercase">Find out more</h5>
+					<h5 class="text-uppercase">Find out more:</h5>
 					<a href="https://www.facebook.com/ISS/" class="facebook"
 						target="_blank"><i class="fab fa-facebook"></i></a>
 					<a href="https://www.instagram.com/iss/?hl=en" class="instagram"
