Add the correct text about ISS in About section

--- a/index.html
+++ b/index.html
@@ -104,21 +104,9 @@
 						<div class="col-lg-6 col-md-12 about-text">
 							<h2 class="text-uppercase pt-5"><span>What</span><span>is the</span><span>ISS?</span></h2>
 							<div class="about-information py-4 w-75">
-								<p> Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium
-									doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore
-									veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam
-									voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur
-									magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est,
-									qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng]velit, sed quia
-									non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam
-									quaerat voluptatem.</p>
-								<p> Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis
-									suscipitlaboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum
-									iure reprehenderit, qui inea voluptate velit esse, quam nihil molestiae consequatur,
-									vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et
-									accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum
-									deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati
-									cupiditate non-provident,</p>
+                            <!-- Text below copied from NASA official website-->
+								<p>The International Space Station is a large spacecraft in orbit around Earth. It serves as a home where crews of astronauts and cosmonauts live. The space station is also a unique science laboratory. Several nations worked together to build and use the space station. The space station is made of parts that were assembled in space by astronauts. It orbits Earth at an average altitude of approximately 250 miles. It travels at 17,500 mph. This means it orbits Earth every 90 minutes. NASA is using the space station to learn more about living and working in space. These lessons will make it possible to send humans farther into space than ever before.</p>
+								<p> The space station has made it possible for people to have an ongoing presence in space. Human beings have been living in space every day since the first crew arrived. The space station's laboratories allow crew members to do research that could not be done anywhere else. This scientific research benefits people on Earth. Space research is even used in everyday life. The results are products called "spinoffs." Scientists also study what happens to the body when people live in microgravity for a long time. NASA and its partners have learned how to keep a spacecraft working well.</p>
 							</div>
 						</div>
 					</div>
