Fix color of quotes-title in quotes section

--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
 					<!---CONTAINS BOOTSTRAP CLASS-->
 					<div class="col-12">
 						<div class="quotes-title">
-							<h1 class="text-uppercase"><i class="fas fa-user-astronaut"></i> Astronauts <span>ISS</span> thoughts <i class="fas fa-user-astronaut"></i></h1>
+							<h1 class="text-uppercase">Astronauts <span>ISS</span> thoughts</h1>
+                            
 							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis
 								voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
 						</div>
