--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-12 page-title">
 						<h4 class="title-text text-uppercase">Tracking the</h4>
-						<h1 class="title-text text-uppercase">ISS_____</h1>
+						<h1 class="title-text text-uppercase">ISS</h1>
 						<h3 class="title-text text-uppercase">in Real Time</h3>
 						<div class="space-icon">
 							<div class="d-flex flex-row flex-wrap">
