--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="menu">
 			<!-- Start copied code: Bootstrap Navbar components code -->
 			<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">Amazing ISS</a>
+				<a class="navbar-brand" href="#">ISS R-T</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -228,10 +228,8 @@
 					<!---CONTAINS BOOTSTRAP CLASS-->
 					<div class="col-12">
 						<div class="quotes-title">
-							<h1 class="text-uppercase">Astronauts <span>ISS</span> thoughts</h1>
-                            
-							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis
-								voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
+							<h1 class="text-uppercase">Astronaut <span>ISS</span> thoughts</h1>
+							<p>Enough about the structure itself; what do the people who have visited the ISS say?</p>
 						</div>
 					</div>
 				</div>
