Fix Magnific popus css and js file updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 	<!-- Magnific Popup css file -->
-	<link rel="stylesheet" href="SpaceStation/Magnific-Popup/dist/magnific-popup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+	<!---<link rel="stylesheet" href="SpaceStation/Magnific-Popup/dist/magnific-popup.css">-->
 
 	<!-- Owl-carousel css file -->
 	<link rel="stylesheet" href="SpaceStation/owl-carousel/css/owl.carousel.min.css">
@@ -322,7 +323,8 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 	<!-- Magnific popup -->
-	<script src="SpaceStation/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+	<!---<script src="SpaceStation/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>-->
 
 	<!-- Owl-carousel js -->
 	<script src="SpaceStation/owl-carousel/js/owl.carousel.min.js"></script>
