Styling the iss-map to be bigger

--- a/index.html
+++ b/index.html
@@ -138,15 +138,14 @@
 				<div class="row">
 					<div class="col-lg-6 offset-lg-3 map">
 						<h1 class="text-uppercase text-center">Where is the ISS RIGHT NOW?</span></h1>
-						<div id="iss-map"></div>
 					</div>
 				</div>
-			</div>
-
-			<div class="container">
 				<div class="row text-center">
 					<!---CONTAINS BOOTSTRAP CLASS-->
-					<div class="col-12">
+					<div class="col-lg-8">
+						<div id="iss-map"></div>
+					</div>
+					<div class="col-lg-4">
 						<div class="quotes-title">
 							<p class="text-center">Latitude: <span id="lat"></span>°<br>
                               Longitude: <span id="long"></span>°<br>
