Fixed smaller spelling errors and removed unnecessary comments

--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
 
 	<!-- Magnific Popup css file -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-	<!---<link rel="stylesheet" href="SpaceStation/Magnific-Popup/dist/magnific-popup.css">-->
 
 	<!-- Owl-carousel css file -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-	<!---<link rel="stylesheet" href="SpaceStation/owl-carousel/css/owl.carousel.min.css">-->
 	<link rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
-	<!---<link rel="stylesheet" href="SpaceStation/owl-carousel/css/owl.theme.default.min.css">-->
 
 	<!--Leaflet css file-->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -132,7 +129,7 @@
 		</section>
 		<!---------------------------- End About section ------------------------------>
 
-		<!---------------------------- Start ISS-Map section ------------------------------>
+		<!---------------------------- Start RT section ------------------------------>
 		<section class="RT-section" id="RT-section">
 			<div class="container">
 				<div class="row">
@@ -159,7 +156,7 @@
 
 		</section>
 
-		<!---------------------------- End ISS-Map section ------------------------------>
+		<!---------------------------- End RT section ------------------------------>
 
 		<!---------------------------- Start Gallery section ------------------------------>
 
