--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<a class="nav-link" href="#about-section">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#RT-section">Location R-T</a>
+							<a class="nav-link" href="#RT-section">ISS Real Time</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#gallery-section">Gallery</a>
@@ -80,7 +80,6 @@
 						<h3 class="title-text text-uppercase">in Real Time</h3>
 						<div class="space-icon">
 							<div class="d-flex flex-row flex-wrap">
-								<!----ERROR: icon below does not want to move because it it considered text to the browser, find out how to push-->
 								<i class="fas fa-space-shuttle ml-4"></i>
 							</div>
 						</div>
@@ -122,6 +121,7 @@
 									"spinoffs." Scientists also study what happens to the body when people live in
 									microgravity for a long time. NASA and its partners have learned how to keep a
 									spacecraft working well.</p>
+								<!-- End text copied from NASA official website-->
 							</div>
 						</div>
 					</div>
@@ -138,7 +138,6 @@
 					</div>
 				</div>
 				<div class="row text-center">
-					<!---CONTAINS BOOTSTRAP CLASS-->
 					<div class="col-lg-8">
 						<div id="iss-map"></div>
 					</div>
@@ -166,7 +165,6 @@
 					<h1 class="text-uppercase text-center">ISS gallery</h1>
 				</div>
 				<div class="row grid">
-					<!--ERROR: get images closer together if i have time-->
 					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item gallery-item-1">
 						<div class="pictures">
 							<a class="test-popup-link" href="SpaceStation/img/gallery-big/ms2-gallery2-big.jpg">
@@ -239,7 +237,6 @@
 		<section class="quotes-section" id="quotes-section">
 			<div class="container">
 				<div class="row text-center quote-header">
-					<!---CONTAINS BOOTSTRAP CLASS-->
 					<div class="col-12">
 						<div class="quotes-title">
 							<h1 class="text-uppercase">Astronaut <span>ISS</span> thoughts</h1>
@@ -294,7 +291,6 @@
 									</div>
 								</div>
 							</div>
-
 		</section>
 
 
