Fixed RT-section to ISS Real Time section to make sections more clear

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		</section>
 		<!---------------------------- End About section ------------------------------>
 
-		<!---------------------------- Start RT section ------------------------------>
+		<!---------------------------- Start ISS Real Time section ------------------------------>
 		<section class="RT-section" id="RT-section">
 			<div class="container">
 				<div class="row">
@@ -155,7 +155,7 @@
 
 		</section>
 
-		<!---------------------------- End RT section ------------------------------>
+		<!---------------------------- End ISS Real Time section ------------------------------>
 
 		<!---------------------------- Start Gallery section ------------------------------>
 
